current user and some fixes
