# src/router/router.go
@@ -1,23 +1,27 @@
 package router
 
 import (
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	"github.com/snkonoplev/file-manager/auth"
 	"github.com/snkonoplev/file-manager/controller"
 	"github.com/snkonoplev/file-manager/proxy"
+	"github.com/spf13/viper"
 )
 
 type Router struct {
 	engine          *gin.Engine
 	usersController *controller.UsersController
 	a               *auth.Auth
+	viper           *viper.Viper
 }
 
-func NewRouter(engine *gin.Engine, usersController *controller.UsersController, auth *auth.Auth) *Router {
+func NewRouter(engine *gin.Engine, usersController *controller.UsersController, auth *auth.Auth, viper *viper.Viper) *Router {
 	return &Router{
 		engine:          engine,
 		usersController: usersController,
 		a:               auth,
+		viper:           viper,
 	}
 }
 
@@ -26,6 +30,14 @@ func (r *Router) MapHandlers() error {
 	auth, err := r.a.AuthMiddleware()
 	if err != nil {
 		return err
+	}
+
+	if r.viper.GetString("GIN_MODE") == "debug" {
+		config := cors.DefaultConfig()
+		config.AllowOrigins = []string{"http://localhost:8080"}
+		config.AllowCredentials = true
+
+		r.engine.Use(cors.New(config))
 	}
 
 	r.engine.Any("/transmission/*proxyPath", proxy.Proxy)
@@ -37,6 +49,7 @@ func (r *Router) MapHandlers() error {
 	{
 		users.GET("", r.usersController.GetUsers)
 		users.GET(":id", r.usersController.GetUser)
+		users.GET("/current", r.usersController.CurrentUser)
 		users.POST("", r.usersController.CreteUser)
 		users.PUT("", r.usersController.UpdateUser)
 		users.DELETE(":id", r.usersController.DeleteUser)
